--- a/src/asset/css/Row.css
+++ b/src/asset/css/Row.css
@@ -20,7 +20,13 @@
   padding: 10px;
 }
 .row__posters::-webkit-scrollbar {
-  display: none;
+  width: 10px;
+  border-radius: 20px;
+}
+.row__posters::-webkit-scrollbar-thumb {
+  background-color: rgba(247, 249, 249, 0.5);
+  border-radius: 20px;
+  width: 10px;
 }
 .row__posterLarge {
   width: 100%;
